[gd_scene load_steps=24 format=3 uid="uid://bj5jfcvnvuteg"]

[ext_resource type="Script" path="res://Assets/Code/main.gd" id="1_mc1ip"]
[ext_resource type="Texture2D" uid="uid://bxiajexwnfj0w" path="res://Assets/Art/Windows/windows.png" id="2_yf2pr"]
[ext_resource type="Texture2D" uid="uid://c8n2q4twj7heh" path="res://Assets/Art/exit.png" id="3_aird1"]
[ext_resource type="Texture2D" uid="uid://d3vnye0nttem0" path="res://Assets/Art/minimise.png" id="4_ufbn6"]
[ext_resource type="PackedScene" uid="uid://c5kwftd1r4kun" path="res://scenes/morbs/morb.tscn" id="5_nwihd"]
[ext_resource type="Script" path="res://Assets/Code/ui.gd" id="6_xorek"]
[ext_resource type="Texture2D" uid="uid://dwkn3vgdl83dv" path="res://Assets/Art/morbs/durable.png" id="7_k1ijk"]
[ext_resource type="Texture2D" uid="uid://oh8bv01lc7xy" path="res://Assets/Art/Windows/menu.png" id="7_rk8fa"]
[ext_resource type="Texture2D" uid="uid://deyi3hiq3boa" path="res://Assets/Art/morbs/bit-one.png" id="8_v87ex"]
[ext_resource type="Texture2D" uid="uid://bdly1l7881rub" path="res://Assets/Art/morbs/bit-hundred.png" id="9_6fc1t"]
[ext_resource type="Texture2D" uid="uid://bnipmg6xok61v" path="res://Assets/Art/morbs/bit-thousand.png" id="9_r1tcl"]
[ext_resource type="Texture2D" uid="uid://cf0xq1hcxa28b" path="res://Assets/Art/morbs/bit-five-thousand.png" id="11_2g7q3"]
[ext_resource type="Texture2D" uid="uid://dwqkmxlp0imf6" path="res://Assets/Art/morbs/bit-ten-thousand.png" id="12_egfp3"]
[ext_resource type="Texture2D" uid="uid://bqajefoeukmja" path="res://Assets/Art/morbs/gold.png" id="13_86a5g"]
[ext_resource type="Texture2D" uid="uid://b1i1pofxhftjx" path="res://Assets/Art/morbs/smoke.png" id="14_i4naj"]
[ext_resource type="Texture2D" uid="uid://d0r1c2j0mt16n" path="res://Assets/Art/morbs/raid.png" id="15_fws7b"]
[ext_resource type="Texture2D" uid="uid://cngoauo6745t2" path="res://Assets/Art/morbs/fire.png" id="17_makeq"]
[ext_resource type="Texture2D" uid="uid://b6nvndgdx1lih" path="res://Assets/Art/morbs/paladin.png" id="18_dyfx1"]
[ext_resource type="PackedScene" uid="uid://0fdi8wslf8ep" path="res://scenes/shop.tscn" id="18_k31uh"]
[ext_resource type="FontFile" uid="uid://cx5234pn1h4qk" path="res://3X3Mono-drx1V.ttf" id="20_60ecv"]
[ext_resource type="Texture2D" uid="uid://bpyybp3pvjui3" path="res://Assets/Art/morbs/corruption.png" id="20_vhp4d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_koggt"]
size = Vector2(531, 127)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gckrq"]
size = Vector2(50, 611)

[node name="main" type="Node2D"]
script = ExtResource("1_mc1ip")

[node name="window" type="Sprite2D" parent="."]
position = Vector2(250, 250)
scale = Vector2(7.8125, 7.8125)
texture = ExtResource("2_yf2pr")

[node name="money" type="Label" parent="."]
offset_left = 22.0
offset_top = 68.0
offset_right = 134.0
offset_bottom = 91.0
theme_override_colors/font_color = Color(0.133333, 0.12549, 0.203922, 1)
theme_override_fonts/font = ExtResource("20_60ecv")
text = "Money: "

[node name="buttons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 484.0
offset_bottom = 56.0

[node name="move_window" type="TextureButton" parent="buttons"]
layout_mode = 0
offset_top = -10.0
offset_right = 468.0
offset_bottom = 41.0

[node name="Exit" type="TextureButton" parent="buttons"]
layout_mode = 0
offset_left = 420.0
offset_top = 5.0
offset_right = 429.0
offset_bottom = 14.0
scale = Vector2(3, 3)
texture_normal = ExtResource("3_aird1")

[node name="Minimise" type="TextureButton" parent="buttons"]
layout_mode = 0
offset_left = 387.0
offset_top = 5.0
offset_right = 396.0
offset_bottom = 14.0
scale = Vector2(3, 3)
texture_normal = ExtResource("4_ufbn6")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(249, 548)
shape = SubResource("RectangleShape2D_koggt")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(247, -2)
shape = SubResource("RectangleShape2D_koggt")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-9, 295.5)
shape = SubResource("RectangleShape2D_gckrq")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(509, 302)
shape = SubResource("RectangleShape2D_gckrq")

[node name="morbs" type="Node2D" parent="."]

[node name="morb" parent="morbs" instance=ExtResource("5_nwihd")]
position = Vector2(119, 141)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 128.0
offset_top = 81.0
offset_right = 168.0
offset_bottom = 121.0
script = ExtResource("6_xorek")

[node name="menu" type="Control" parent="UI"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="UI/menu"]
layout_mode = 0
offset_left = -116.0
offset_top = -92.0
offset_right = 366.0
offset_bottom = 431.0
color = Color(1, 1, 1, 0)

[node name="Menu" type="Sprite2D" parent="UI/menu"]
position = Vector2(121, 168)
scale = Vector2(7.813, 7.813)
texture = ExtResource("7_rk8fa")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/menu"]
layout_mode = 0
offset_left = -58.0
offset_top = 27.0
offset_right = 299.0
offset_bottom = 355.0

[node name="OptionButton" type="OptionButton" parent="UI/menu/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
selected = 0
item_count = 12
popup/item_0/text = "Durable"
popup/item_0/icon = ExtResource("7_k1ijk")
popup/item_1/text = "One bit"
popup/item_1/icon = ExtResource("8_v87ex")
popup/item_1/id = 1
popup/item_2/text = "Hundred Bit"
popup/item_2/icon = ExtResource("9_6fc1t")
popup/item_2/id = 2
popup/item_3/text = "Thousand Bits"
popup/item_3/icon = ExtResource("9_r1tcl")
popup/item_3/id = 3
popup/item_4/text = "Five Thousand"
popup/item_4/icon = ExtResource("11_2g7q3")
popup/item_4/id = 4
popup/item_5/text = "Ten Thousand Bit"
popup/item_5/icon = ExtResource("12_egfp3")
popup/item_5/id = 5
popup/item_6/text = "Gold"
popup/item_6/icon = ExtResource("13_86a5g")
popup/item_6/id = 6
popup/item_7/text = "Smoke"
popup/item_7/icon = ExtResource("14_i4naj")
popup/item_7/id = 7
popup/item_8/text = "Raid"
popup/item_8/icon = ExtResource("15_fws7b")
popup/item_8/id = 8
popup/item_9/text = "Fire"
popup/item_9/icon = ExtResource("17_makeq")
popup/item_9/id = 9
popup/item_10/text = "Paladin"
popup/item_10/icon = ExtResource("18_dyfx1")
popup/item_10/id = 10
popup/item_11/text = "Corruption"
popup/item_11/icon = ExtResource("20_vhp4d")
popup/item_11/id = 11

[node name="Shop" type="Button" parent="UI/menu/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Shop"

[node name="Close" type="TextureButton" parent="UI/menu"]
layout_mode = 0
offset_left = 263.0
offset_top = -22.0
offset_right = 272.0
offset_bottom = -13.0
scale = Vector2(3, 3)
texture_normal = ExtResource("3_aird1")

[node name="shop" parent="UI" instance=ExtResource("18_k31uh")]
visible = false
layout_mode = 1
offset_left = -128.0
offset_top = -81.0
offset_right = -128.0
offset_bottom = -81.0

[connection signal="button_down" from="buttons/move_window" to="." method="_on_move_window_button_down"]
[connection signal="button_up" from="buttons/move_window" to="." method="_on_move_window_button_up"]
[connection signal="pressed" from="buttons/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="buttons/Minimise" to="." method="_on_minimise_pressed"]
[connection signal="pressed" from="UI/menu/VBoxContainer/Shop" to="UI" method="_on_shop_pressed"]
[connection signal="pressed" from="UI/menu/Close" to="UI" method="_on_close_pressed"]
